--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -4,7 +4,7 @@
     <title>Mick Schroeder's Citation Generator</title>
     <meta
       name="description"
-      content="Free and open-source software that automatically suggests citations and helps write a bibliography for you."
+      content="Generate free citations and PDF filenames for your research. Instantly search by DOI, PMID, or URL."
     />
     <meta name="title" content="Mick Schroeder's Citation Generator" />
     <meta property="og:type" content="website" />
@@ -16,7 +16,7 @@
     <meta property="og:title" content="Mick Schroeder's Citation Generator" />
     <meta
       property="og:description"
-      content="Generate citations instantly from PubMed, journals, websites, and books. Free, open-source, and ad-supported."
+      content="Generate free citations and PDF filenames for your research. Instantly search by DOI, PMID, or URL."
     />
     <meta property="og:site_name" content="cite.mickschroeder.com" />
     <meta name="author" content="Mick Schroeder, LLC" />
@@ -47,7 +47,7 @@
     <meta name="twitter:title" content="Mick Schroeder's Citation Generator" />
     <meta
       name="twitter:description"
-      content="Generate citations instantly from PubMed, journals, websites, and books. Free, open-source, and ad-supported."
+      content="Generate free citations and PDF filenames for your research. Instantly search by DOI, PMID, or URL."
     />
     <meta name="theme-color" content="#1e50a0" />
     <!-- Google adsense (adsbygoogle.js) -->
