--- a/src/html/hydrate.hbs
+++ b/src/html/hydrate.hbs
@@ -86,7 +86,12 @@
                       class="btn dropdown-item"
                       tabindex="-2"
                       role="menuitem"
-                    ><span>Download RTF (all word processors)</span></button><button
+                    ><span>Download RTF</span></button><button
+                      data-format="docx"
+                      class="btn dropdown-item"
+                      tabindex="-2"
+                      role="menuitem"
+                    ><span>Download DOCX</span></button><button
                       data-format="html"
                       class="btn clipboard-trigger dropdown-item"
                       tabindex="-2"
